# miniqmt-demo

./: .gitignore  002-与客户端建立连接.ipynb  003-获取历史行情数据.ipynb  004-获取实时行情数据.ipynb  005-获取财务报表数据.ipynb  1.4 xtquant使用.ipynb  1.5 VIP行情.ipynb  2.1 xtdata模块.ipynb  2.10 可转债基础.ipynb  2.2 连接行情源.ipynb  2.3 市场基础信息.ipynb  2.4 交易日历.ipynb  2.5 历史行情.ipynb  2.6 实时行情.ipynb  2.7 财务数据.ipynb  2.8 新股发行.ipynb  3.1 xttrader模块.ipynb  3.2 建立链接.ipynb  3.3 订阅账户.ipynb  3.4 报单与撤单.ipynb  3.5 资产信息.ipynb  3.7 委托信息.ipynb  3.8 成交信息.ipynb  LICENSE  README.md  pyproject.toml  测试订阅.ipynb
