[tool.poetry]
name = "miniqmt-demo"
version = "0.1.0"
description = ""
authors = ["mayuanchi <mayuanchi1989@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
